# PogLang

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  gamer_test  gamer_testtwo  main  main.cpp  pog.cpp
Testing/Temporary/: CTestCostData.txt
doc/: DocPogLang.aux  DocPogLang.fdb_latexmk  DocPogLang.fls  DocPogLang.tex  DocPogLang.toc
include/: gamer.hpp  lexer.hpp  parser.hpp  symbol.hpp  test.hpp  token.hpp  utils.hpp
include/grammar/: and.hpp  arithm.hpp  constant.hpp  do.hpp  else.hpp  expr.hpp  expr_type.hpp  id.hpp  if.hpp  logical.hpp  node.hpp  not.hpp  op.hpp  or.hpp  print.hpp  rel.hpp  seq.hpp  set.hpp  stmt.hpp  unary.hpp  while.hpp
rust/PogLang/src/: lib.rs  main.rs
rust/PogLang/src/lex/: lexer.rs
rust/PogLang/src/tok/: error.rs  mod.rs  token.rs  tokentype.rs
src/: lexer.cpp  parser.cpp  symbol.cpp  token.cpp  utils.cpp
src/gamer/: gamer.cpp
src/grammar/: and.cpp  arithm.cpp  constant.cpp  do.cpp  else.cpp  expr.cpp  id.cpp  if.cpp  logical.cpp  not.cpp  op.cpp  or.cpp  print.cpp  rel.cpp  seq.cpp  set.cpp  stmt.cpp  unary.cpp  while.cpp
src/teste/: test.cpp
test/: Based.pog  SEXO.pog
test/Based/: Cargo.toml
test/Based/src/: main.rs
test/gamer/: gamer_test.cpp
